resources/kube/manifests/javaspringboot/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${repoName}
  namespace: ${repoName}-${appEnv}
  labels:
    appName: ${repoName}
    apiVersion: "${apiMajVersion}"
    appVersion: "${appMajVersion}"
    environment: ${appEnv}
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.${repoName}: regex:^${appMajVersion}.*
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      appName: ${repoName}
      apiVersion: "${apiMajVersion}"
      appVersion: "${appMajVersion}"
      environment: ${appEnv}
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        appName: ${repoName}
        apiVersion: "${apiMajVersion}"
        appVersion: "${appMajVersion}"
        environment: ${appEnv}
    spec:
      containers:
      - name: ${repoName}
        image: ${dockerRegistryUrl}/${repoName}/${appEnv}:${appVersion}
        imagePullPolicy: Always
        ports:
        - containerPort: ${appPort}
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: "0.5"
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 256Mi
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regsecret
      restartPolicy: Always
      schedulerName: default-scheduler
---
apiVersion: v1
kind: Service
metadata:
  name: v${apiMajVersion}
  namespace: ${repoName}-${appEnv}
spec:
  ports:
  - port: ${appPort}
    protocol: TCP
    targetPort: ${appPort}
  selector:
    appName: ${repoName}
    apiVersion: "${apiMajVersion}"
    environment: ${appEnv}
  type: ClusterIP
